media-tools/sabnzbd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "sabnzbd.ucdialplans.com"
  rules:
  - backendRefs:
    - name: sabnzbd-service
      namespace: media-tools
      kind: Service
      port: 8080
