media-tools/sabnzbd/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: sabnzbd
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            appGroup: media-arr
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "1900"
        - ports:
            - port: "563"
